# rust-practice

./: README.md
dup-finder/: CLAUDE.md  Cargo.toml  PRD.md
fibonacci/src/: main.rs
lox_interpreter/: .gitignore  CLAUDE.md  Cargo.toml  README.md  progress-backup.md
lox_interpreter/.claude/: settings.json
lox_interpreter/.claude/rules/: ast-index.md
lox_interpreter/graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
lox_interpreter/src/: interpreter.rs  main.rs  parser.rs  scanner.rs
mini_compiler/: CLAUDE.md
mini_compiler/src/: main.rs
network-parse/: CLAUDE.md  Cargo.toml  PRD.md  README.md
network-parse/benches/: model_bench.rs
network-parse/src/: error.rs  lib.rs  main.rs  model.rs
network-parse/src/parser/: atom.rs  mod.rs  rss.rs
network-parse/src/serializer/: mod.rs  rss.rs
rss-atom-parser/: Cargo.toml  README.md
rss-atom-parser/src/: detect.rs  fetch.rs  lib.rs  main.rs
rss-atom-parser/src/serializer/: atom.rs  json.rs
temp-convertor/: Cargo.toml
temp-convertor/src/: main.rs
word-count/src/: main.rs
