[package]
name = "network-parse"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
quick-xml = "0.40.1"
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[features]
default = []
bench = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "model_bench"
harness = false
required-features = ["bench"]
